--- a/_config.yml
+++ b/_config.yml
@@ -11,25 +11,25 @@
 # SITE SETTINGS
 #
 # title appears in the header
-title: Learn-Static Lesson Template
+title: Twine User Manual
 # title-icon appears in the header to give some pizazz (leave blank for none)
 # choose from Bootstrap Icons in _includes/bootstrap-icons
 # find names on https://icons.getbootstrap.com/ (or look in "_includes/bootstrap-icons")
 # some options: code-slash file-code gear tools lightblub book bookmark-star
-title-icon: code-slash
+title-icon: Twine Logo.png
 # description appears in sidebar footer
-description: "Create a lesson website with markdown"
+description: "Create interactive, nonlinear stories with Twine"
 # keywords for meta tags used by search engines
-keywords: "workshops, websites, gh-pages, jekyll"
+keywords: "Twine, interactive games, branching narratives, nonlinear stories"
 # image for meta tags, will appear when sharing link on social media
-featured-image: "/images/uidaho-workshop.jpg"
+featured-image: 
 
 # author name, displayed in credits
-author: evanwill
+author: Yeliz Baloglu Cengay
 # year or date published, displayed in sidebar
-publication_year: 2022
+publication_year: 2023
 # location of code, the full url to your github repository
-source-code: https://github.com/learn-static/lesson-template
+source-code: https://github.com/YBCGitHubby/TwineToolGuide
 # content license (typically "cc by-sa"), displayed in sidebar
 content_license: "CC BY-SA"
 # URL to the content license
@@ -45,7 +45,7 @@ content_license_link: https://creativecommons.org/licenses/by-sa/4.0/
 # header-text-color: 
 # breadcrumbs-background: 
 # breadcrumbs-text-color: 
-# active-nav-color: 
+active-nav-color: #0E4C92
 # link-color:
 # next-button-color:
 # text-color: 
